fix spacing issue

--- a/src/css/Tools.css
+++ b/src/css/Tools.css
@@ -2,6 +2,6 @@
     margin-top: 20px;
 }
 
-.tool {
-    margin-left: 25px;
+button {
+    margin-right: 40px;
 }
